# pyproject.toml

[project]
dependencies = [
    "PyYAML",
    "asyncache",
    "boto3<1.36",
    "cachetools",
    "certifi",
    "cryptography",
    "htcondor",
    "httpx",
    "jsonschema",
    "ldap3",
    "motor",
    "prometheus-client",
    "psutil",
    "pyOpenSSL",
    "pymongo",
    "python-dateutil",
    "requests",
    "requests-futures",
    "requests-toolbelt",
    "setproctitle",
    "tornado",
    "unidecode",
    "wipac-dev-tools",
    "wipac-rest-tools",
] # (can remove comment) originally migrated from 'setup.cfg' by 'WIPACrepo/wipac-dev-py-setup-action' github action package

[project.optional-dependencies] # (can remove comment) originally migrated from 'setup.cfg' by 'WIPACrepo/wipac-dev-py-setup-action' github action package
tests = [
    "beautifulsoup4",
    "coverage",
    "flake8",
    "flexmock",
    "mock",
    "moto[s3]>=5",
    "pytest<8.1",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "requests-mock",
    "respx",
    "types-cachetools",
    "types-requests",
]
docs = [
    "sphinx",
]
