[wipac:cicd_setup_builder]
pypi_name = iceprod
python_min = 3.6
package_paths = iceprod
keywords_spaced = batch workload 

[semantic_release]
version_variable = iceprod/__init__.py:__version__
upload_to_pypi = False
# patch_without_tag = True
commit_parser = semantic_release.history.tag_parser
minor_tag = [minor]
fix_tag = [fix]

[flake8]
ignore = E203,E226,E228,E231,E501,W503,W504
exclude = env,tests

[options]
install_requires =
	boto3
	cachetools
	certifi
	cryptography
	ldap3
	motor
	psutil
	pymongo
	python-dateutil
	PyYAML
	requests
	requests-futures
	requests-toolbelt
	setproctitle
	tornado
	unidecode
	wipac-dev-tools
	wipac-rest-tools

[options.extras_require]
tests =
	coverage
	flake8
	flexmock
	mock
	pytest
	pytest-asyncio
	pytest-cov
	pytest-mock
	requests-mock
docs =
	sphinx